<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:adjustViewBounds="true"
    tools:context="com.example.bigmac.slotmachine.MainActivity">


    <Button
        android:text="@string/button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="10dp"
        android:id="@+id/pullButton"
        android:background="@drawable/mybutton" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginBottom="75dp"
        android:id="@+id/slot1"
        android:layout_above="@+id/pullButton"
        android:layout_toLeftOf="@+id/slot2"
        android:layout_toStartOf="@+id/slot2"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:padding="1dp"
        android:background="#ffffff" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/slot2"
        android:layout_alignTop="@+id/slot1"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
        android:padding="1dp"
        android:background="#ffffff"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/slot3"
        android:layout_alignTop="@+id/slot2"
        android:layout_toRightOf="@+id/slot2"
        android:layout_toEndOf="@+id/slot2"
        tools:ignore="ContentDescription"
        android:padding="1dp"
        android:background="#ffffff"/>

    <TextView
        android:text="@string/bet_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pullButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/amount"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:id="@+id/console"
        android:textAlignment="center"
        android:layout_above="@+id/slot1"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:id="@+id/exitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/quitbutton" />

    <Button
        android:text="@string/subtract"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonSubtract"
        android:layout_alignBaseline="@+id/amount"
        android:layout_alignBottom="@+id/amount"
        android:layout_toLeftOf="@+id/amount"
        android:layout_toStartOf="@+id/amount"
        android:layout_marginRight="10dp"
        tools:ignore="RtlHardcoded"
        android:background="@drawable/mybutton" />

    <Button
        android:text="@string/add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonAdd"
        android:layout_alignBaseline="@+id/buttonSubtract"
        android:layout_alignBottom="@+id/buttonSubtract"
        android:layout_toRightOf="@+id/amount"
        android:layout_toEndOf="@+id/amount"
        android:layout_marginLeft="10dp"
        tools:ignore="RtlHardcoded"
        android:background="@drawable/mybutton" />

</RelativeLayout>
